fix((report-state-toggle)): use icon only for mobile instead of hiding graph view
- Hiding graph view is less intutitive than not showing text. Hide text and use icon views for
phone/mobile view instead.

relates to KBDEV-853

--- a/src/components/RecordFormStateToggle/index.scss
+++ b/src/components/RecordFormStateToggle/index.scss
@@ -1,9 +1,19 @@
 @import '../../theme';
+@import '../../globals';
 
 .record-form-state-toggle {
-  &__option {
-    svg {
-      margin-right: 5px;
+  .toggle-option {
+    &__text {
+      display: none;
+    }
+
+    @media (min-width: #{$breakpoint-med}) {
+
+      // allow 2 columns for large dislays
+      &__text {
+        display: initial;
+        margin-left: 5px;
+      }
     }
   }
 }
